# interactive-story-engine

./: LICENSE  README.md  bossfight.py  demo.py  isengine.py  pyproject.toml
examples/: bossfight.py  demo.py  greeting.py  typewriter.py
src/interactive_story_engine/: __init__.py  printer.py  renderer.py
